--- a/MillimanAccessPortal/MillimanAccessPortal/package.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/package.json
@@ -5,11 +5,13 @@
   "license": "UNLICENSED",
   "dependencies": {
     "bootstrap": "4.1.3",
+    "dompurify": "^1.0.11",
     "jquery": "3.3.1",
     "jquery-mask-plugin": "1.14.15",
     "jquery-validation": "<1.18",
     "jquery-validation-unobtrusive": "^3.2.11",
     "lodash": "^4.17.11",
+    "marked": "^0.6.2",
     "moment": "^2.22.2",
     "node-forge": "^0.7.5",
     "popper.js": "^1.14.1",
@@ -31,12 +33,14 @@
     "yup": "^0.26.10"
   },
   "devDependencies": {
+    "@types/dompurify": "^0.0.32",
     "@types/jest": "^23.3.8",
     "@types/jquery": "^3.3.1",
     "@types/jquery-mask-plugin": "^1.14.3",
     "@types/jquery-validation-unobtrusive": "^3.2.32",
     "@types/jquery.validation": "^1.16.4",
     "@types/lodash": "^4.14.106",
+    "@types/marked": "^0.6.5",
     "@types/node": "8.9.4",
     "@types/node-forge": "^0.7.2",
     "@types/react": "^16.3.14",
